# config_stp_esc

./: .gitignore  README.md  pyproject.toml
config_pearl_esc/: common_params.toml
config_pearl_esc/E2ES/: E2ES_default.toml
config_pearl_esc/ETC/: ESC_ETC_v1.toml
config_pearl_esc/EXOSIMS/: EXOSIMS.toml
config_pearl_esc/support_data/coatings/: AlMgF2_curve.csv  bmc_dm_au.csv
config_stp_esc/: __init__.py
config_stp_esc/configs/: E2ES_default.toml  EXOSIMS.toml  common_params.toml
config_stp_esc/support_data/transmissive_optics/: readme.md
src/config_stp_esc/: __init__.py
src/config_stp_esc/configs/: ESC_ETC_v1.toml  EXOSIMS.toml  common_params.toml
src/config_stp_esc/support_data/coatings/: AlMgF2_curve.csv  bmc_dm_au.csv
src/config_stp_esc/support_data/transmissive_optics/: meadowlark_VIS_pol_transmit.csv  vvc_throughput_vs_lamD.fits
tests/: test_config_esc.py  test_config_stp.py  test_configs.py  test_version_consistency.py
